setting the navbar and home floatting cart section

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -17,7 +17,33 @@
     "languages": "اللغات",
     "english": "الإنجليزية",
     "bangla": "البنغالية",
-    "arabic": "العربية"
+    "arabic": "العربية",
+    "categoryNames": {
+      "men": "الرجال",
+      "fishMeat": "الأسماك واللحوم",
+      "fruitsVegetable": "الفواكه والخضروات",
+      "cooking": "الطبخ",
+      "biscuitCake": "البسكويت والكعك",
+      "householdTools": "أدوات المنزل",
+      "petCare": "رعاية الحيوانات الأليفة",
+      "beautyHealth": "الجمال والصحة",
+      "jamJelly": "المربى والجيلي",
+      "milkDairy": "الحليب والألبان",
+      "drinks": "المشروبات",
+      "breakfast": "الإفطار"
+    },
+    "subcategories": {
+      "fishMeat": ["الأسماك", "اللحوم"],
+      "fruitsVegetable": ["طعام الأطفال", "الفواكه الطازجة", "الفواكه المجففة"],
+      "cooking": ["الدقيق", "الزيت"],
+      "biscuitCake": ["البسكويت", "الكعك"],
+      "householdTools": ["فلتر الماء", "أدوات التنظيف", "مبيدات الحشرات"],
+      "petCare": ["رعاية الكلاب", "رعاية القطط"],
+      "beautyHealth": ["النساء", "الرجال"],
+      "milkDairy": ["الحليب", "الألبان"],
+      "drinks": ["الشاي", "الماء", "العصير"],
+      "breakfast": ["الخبز", "الحبوب"]
+    }
   },
   "home": {
     "welcome": "مرحبا بك في متجرنا",
