making the complete navbar work with the all the language in dropdown

--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -7,6 +7,7 @@
     "myAccount": "আমার অ্যাকাউন্ট",
     "login": "লগইন",
     "logout": "লগআউট",
+    "home": "হোম",
     "searchPlaceholder": "পণ্য খুঁজুন (যেমন মাছ, আপেল, তেল)",
     "categories": "ক্যাটাগরি",
     "pages": "পেজ",
