--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -7,6 +7,7 @@
     "myAccount": "حسابي",
     "login": "تسجيل الدخول",
     "logout": "تسجيل الخروج",
+    "home": "الرئيسية",
     "searchPlaceholder": "البحث عن المنتجات (مثل السمك، التفاح، الزيت)",
     "categories": "الفئات",
     "pages": "الصفحات",
