--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,6 +7,7 @@
     "myAccount": "My Account",
     "login": "Login",
     "logout": "Logout",
+    "home": "Home",
     "searchPlaceholder": "Search for products (e.g. fish, apple, oil)",
     "categories": "Categories",
     "pages": "Pages",
